# tensorspline

./: .gitignore  CMakeLists.txt  Makefile  README.md  TFLS.ipynb  bitbucket-pipelines.yml  setup.py  splinegrid_cpu.cc  splinegrid_gpu.cc  splinegrid_gpu.cu.cc  splinegrid_gradient_cpu.cc  splinegrid_gradient_gpu.cu.cc  splines.cc  splines.h  tensorspline.py
src/: splinegrid_cpu.cc  splinegrid_gpu.cc  splinegrid_gpu.cu.cc  splines.cc  splines.h
tensorspline/: __init__.py  axes.py  extension.py  interpolator.py  kernels.py  util.py
tensorspline/src/: CudaErrorChecks.h  padding.cc  padding_cpu.cc  padding_gpu.cc  splinegrid_cpu.cc  splinegrid_gpu.cc  splinemapping_cpu.cc  splinemapping_gpu.cc  splines.cc  splines.h
tensorspline/tests/: test_spline_grid.py
